// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template golden output > event-pipeline → CloudFormation 1`] = `
"{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Event-Driven Pipeline — generated by KloudArch Studio. Review before deploying.",
  "Resources": {
    "OrdersTable": {
      "Type": "AWS::DynamoDB::Table",
      "Properties": {
        "BillingMode": "PAY_PER_REQUEST",
        "AttributeDefinitions": [
          {
            "AttributeName": "order_id",
            "AttributeType": "S"
          }
        ],
        "KeySchema": [
          {
            "AttributeName": "order_id",
            "KeyType": "HASH"
          }
        ]
      }
    },
    "OrdersQueue": {
      "Type": "AWS::SQS::Queue",
      "Properties": {
        "VisibilityTimeout": 30
      }
    },
    "LambdaExecRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              },
              "Action": "sts:AssumeRole"
            }
          ]
        },
        "ManagedPolicyArns": [
          "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
        ],
        "Policies": [
          {
            "PolicyName": "kloudarch-connected-resources",
            "PolicyDocument": {
              "Version": "2012-10-17",
              "Statement": [
                {
                  "Effect": "Allow",
                  "Action": "events:PutEvents",
                  "Resource": {
                    "Fn::GetAtt": [
                      "DomainBus",
                      "Arn"
                    ]
                  }
                },
                {
                  "Effect": "Allow",
                  "Action": [
                    "dynamodb:GetItem",
                    "dynamodb:PutItem",
                    "dynamodb:UpdateItem",
                    "dynamodb:DeleteItem",
                    "dynamodb:Query",
                    "dynamodb:Scan"
                  ],
                  "Resource": {
                    "Fn::GetAtt": [
                      "OrdersTable",
                      "Arn"
                    ]
                  }
                },
                {
                  "Effect": "Allow",
                  "Action": [
                    "sqs:ReceiveMessage",
                    "sqs:DeleteMessage",
                    "sqs:GetQueueAttributes"
                  ],
                  "Resource": {
                    "Fn::GetAtt": [
                      "OrdersQueue",
                      "Arn"
                    ]
                  }
                }
              ]
            }
          }
        ]
      }
    },
    "IngestFn": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Runtime": "nodejs22.x",
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LambdaExecRole",
            "Arn"
          ]
        },
        "MemorySize": 256,
        "Timeout": 10,
        "Code": {
          "ZipFile": "exports.handler = async () => ({\\n  statusCode: 200,\\n  body: JSON.stringify({ message: \\"KloudArch placeholder - replace me\\" }),\\n});"
        },
        "Environment": {
          "Variables": {
            "EVENT_BUS": {
              "Fn::GetAtt": [
                "DomainBus",
                "Name"
              ]
            }
          }
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Ingest Fn"
          }
        ]
      }
    },
    "OrderProcessor": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Runtime": "python3.13",
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LambdaExecRole",
            "Arn"
          ]
        },
        "MemorySize": 512,
        "Timeout": 10,
        "Code": {
          "ZipFile": "def handler(event, context):\\n    return {\\"statusCode\\": 200, \\"body\\": \\"KloudArch placeholder - replace me\\"}"
        },
        "Environment": {
          "Variables": {
            "TABLE_NAME": {
              "Ref": "OrdersTable"
            }
          }
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Order Processor"
          }
        ]
      }
    },
    "OrdersQueueToOrderProcessor": {
      "Type": "AWS::Lambda::EventSourceMapping",
      "Properties": {
        "EventSourceArn": {
          "Fn::GetAtt": [
            "OrdersQueue",
            "Arn"
          ]
        },
        "FunctionName": {
          "Ref": "OrderProcessor"
        },
        "BatchSize": 10
      }
    },
    "AlertsTopic": {
      "Type": "AWS::SNS::Topic",
      "Properties": {}
    },
    "DomainBus": {
      "Type": "AWS::Events::EventBus",
      "Properties": {
        "Name": {
          "Fn::Sub": "\${AWS::StackName}-app-events"
        }
      }
    },
    "DomainBusOrdersQueueRule": {
      "Type": "AWS::Events::Rule",
      "Properties": {
        "EventBusName": {
          "Ref": "DomainBus"
        },
        "EventPattern": {
          "source": [
            {
              "prefix": ""
            }
          ]
        },
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "OrdersQueue",
                "Arn"
              ]
            },
            "Id": "target-ordersqueue"
          }
        ]
      }
    },
    "DomainBusOrdersQueueQueuePolicy": {
      "Type": "AWS::SQS::QueuePolicy",
      "Properties": {
        "Queues": [
          {
            "Ref": "OrdersQueue"
          }
        ],
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": "events.amazonaws.com"
              },
              "Action": "sqs:SendMessage",
              "Resource": {
                "Fn::GetAtt": [
                  "OrdersQueue",
                  "Arn"
                ]
              },
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Fn::GetAtt": [
                      "DomainBusOrdersQueueRule",
                      "Arn"
                    ]
                  }
                }
              }
            }
          ]
        }
      }
    },
    "DomainBusAlertsTopicRule": {
      "Type": "AWS::Events::Rule",
      "Properties": {
        "EventBusName": {
          "Ref": "DomainBus"
        },
        "EventPattern": {
          "source": [
            {
              "prefix": ""
            }
          ]
        },
        "Targets": [
          {
            "Arn": {
              "Ref": "AlertsTopic"
            },
            "Id": "target-alertstopic"
          }
        ]
      }
    },
    "IngestAPI": {
      "Type": "AWS::ApiGatewayV2::Api",
      "Properties": {
        "Name": {
          "Fn::Sub": "\${AWS::StackName}-ingestapi"
        },
        "ProtocolType": "HTTP"
      }
    },
    "IngestAPIStage": {
      "Type": "AWS::ApiGatewayV2::Stage",
      "Properties": {
        "ApiId": {
          "Ref": "IngestAPI"
        },
        "StageName": "prod",
        "AutoDeploy": true
      }
    },
    "IngestAPIIngestFnIntegration": {
      "Type": "AWS::ApiGatewayV2::Integration",
      "Properties": {
        "ApiId": {
          "Ref": "IngestAPI"
        },
        "IntegrationType": "AWS_PROXY",
        "IntegrationUri": {
          "Fn::GetAtt": [
            "IngestFn",
            "Arn"
          ]
        },
        "PayloadFormatVersion": "2.0"
      }
    },
    "IngestAPIIngestFnRoute": {
      "Type": "AWS::ApiGatewayV2::Route",
      "Properties": {
        "ApiId": {
          "Ref": "IngestAPI"
        },
        "RouteKey": "ANY /ingestfn/{proxy+}",
        "Target": {
          "Fn::Sub": "integrations/\${IngestAPIIngestFnIntegration}"
        }
      }
    },
    "IngestAPIIngestFnPermission": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Ref": "IngestFn"
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Sub": "arn:aws:execute-api:\${AWS::Region}:\${AWS::AccountId}:\${IngestAPI}/*/*"
        }
      }
    }
  },
  "Outputs": {
    "IngestAPIEndpoint": {
      "Value": {
        "Fn::GetAtt": [
          "IngestAPI",
          "ApiEndpoint"
        ]
      },
      "Description": "Invoke URL of Ingest API"
    }
  }
}"
`;

exports[`template golden output > event-pipeline → Terraform 1`] = `
"# ╔══════════════════════════════════════════════════════════════════╗
# ║  EVENT-DRIVEN PIPELINE                                           ║
# ║  Generated by KloudArch Studio — review before applying.          ║
# ╚══════════════════════════════════════════════════════════════════╝

terraform {
  required_version = ">= 1.6.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

variable "project" {
  type    = string
  default = "event-driven-pipeline"
}

variable "aws_region" {
  type    = string
  default = "us-east-1"
}

provider "aws" {
  region = var.aws_region
}

# ── shared ──────────────────────────────────────────────────────
resource "aws_iam_role" "lambda_exec" {
  name = "\${var.project}-lambda-exec"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Action    = "sts:AssumeRole"
      Effect    = "Allow"
      Principal = { Service = "lambda.amazonaws.com" }
    }]
  })
}

resource "aws_iam_role_policy_attachment" "lambda_basic" {
  role       = aws_iam_role.lambda_exec.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
}

# ── Orders Table ────────────────────────────────────────────
resource "aws_dynamodb_table" "orders_table" {
  name         = "\${var.project}-orders-table"
  billing_mode = "PAY_PER_REQUEST"
  hash_key     = "order_id"

  attribute {
    name = "order_id"
    type = "S"
  }
}

# ── Orders Queue ────────────────────────────────────────────
resource "aws_sqs_queue" "orders_queue" {
  name                       = "\${var.project}-orders-queue"
  visibility_timeout_seconds = 30
}

# ── Alerts Topic ────────────────────────────────────────────
resource "aws_sns_topic" "alerts_topic" {
  name = "\${var.project}-alerts-topic"
}

# ── Ingest Fn ───────────────────────────────────────────────
resource "aws_lambda_function" "ingest_fn" {
  function_name = "\${var.project}-ingest-fn"
  role          = aws_iam_role.lambda_exec.arn
  runtime       = "nodejs22.x"
  handler       = "index.handler"
  memory_size   = 256
  timeout       = 10

  # Package your code at this path before applying.
  filename         = "build/ingest_fn.zip"
  source_code_hash = filebase64sha256("build/ingest_fn.zip")

  environment {
    variables = {
      EVENT_BUS = aws_cloudwatch_event_bus.domain_bus.name
    }
  }
}

# NOTE: grant ingest_fn least-privilege access to the connected resources above.

# ── Order Processor ─────────────────────────────────────────
resource "aws_lambda_function" "order_processor" {
  function_name = "\${var.project}-order-processor"
  role          = aws_iam_role.lambda_exec.arn
  runtime       = "python3.13"
  handler       = "index.handler"
  memory_size   = 512
  timeout       = 10

  # Package your code at this path before applying.
  filename         = "build/order_processor.zip"
  source_code_hash = filebase64sha256("build/order_processor.zip")

  environment {
    variables = {
      TABLE_NAME = aws_dynamodb_table.orders_table.name
    }
  }
}

resource "aws_lambda_event_source_mapping" "orders_queue_to_order_processor" {
  event_source_arn = aws_sqs_queue.orders_queue.arn
  function_name    = aws_lambda_function.order_processor.arn
  batch_size       = 10
}

# NOTE: grant order_processor least-privilege access to the connected resources above.

# ── Domain Bus ──────────────────────────────────────────────
resource "aws_cloudwatch_event_bus" "domain_bus" {
  name = "app-events"
}

resource "aws_cloudwatch_event_rule" "domain_bus_orders_queue" {
  name           = "\${var.project}-to-orders-queue"
  event_bus_name = aws_cloudwatch_event_bus.domain_bus.name

  # TODO: narrow this pattern to the events this target cares about.
  event_pattern = jsonencode({ source = [{ prefix = "" }] })
}

resource "aws_cloudwatch_event_target" "domain_bus_orders_queue" {
  rule           = aws_cloudwatch_event_rule.domain_bus_orders_queue.name
  event_bus_name = aws_cloudwatch_event_bus.domain_bus.name
  arn            = aws_sqs_queue.orders_queue.arn
}

resource "aws_cloudwatch_event_rule" "domain_bus_alerts_topic" {
  name           = "\${var.project}-to-alerts-topic"
  event_bus_name = aws_cloudwatch_event_bus.domain_bus.name

  # TODO: narrow this pattern to the events this target cares about.
  event_pattern = jsonencode({ source = [{ prefix = "" }] })
}

resource "aws_cloudwatch_event_target" "domain_bus_alerts_topic" {
  rule           = aws_cloudwatch_event_rule.domain_bus_alerts_topic.name
  event_bus_name = aws_cloudwatch_event_bus.domain_bus.name
  arn            = aws_sns_topic.alerts_topic.arn
}

# ── Ingest API ──────────────────────────────────────────────
resource "aws_apigatewayv2_api" "ingest_api" {
  name          = "\${var.project}-ingest-api"
  protocol_type = "HTTP"
}

resource "aws_apigatewayv2_stage" "ingest_api" {
  api_id      = aws_apigatewayv2_api.ingest_api.id
  name        = "prod"
  auto_deploy = true
}

resource "aws_apigatewayv2_integration" "ingest_api_ingest_fn" {
  api_id                 = aws_apigatewayv2_api.ingest_api.id
  integration_type       = "AWS_PROXY"
  integration_uri        = aws_lambda_function.ingest_fn.invoke_arn
  payload_format_version = "2.0"
}

resource "aws_apigatewayv2_route" "ingest_api_ingest_fn" {
  api_id    = aws_apigatewayv2_api.ingest_api.id
  route_key = "ANY /ingest-fn/{proxy+}"
  target    = "integrations/\${aws_apigatewayv2_integration.ingest_api_ingest_fn.id}"
}

resource "aws_lambda_permission" "ingest_api_ingest_fn" {
  statement_id  = "AllowAPIGw_ingest_fn"
  action        = "lambda:InvokeFunction"
  function_name = aws_lambda_function.ingest_fn.function_name
  principal     = "apigateway.amazonaws.com"
  source_arn    = "\${aws_apigatewayv2_api.ingest_api.execution_arn}/*/*"
}

# ── Event Producers ─────────────────────────────────────────
# External actor "Event Producers" (api clients) — nothing to provision.

# ── outputs ─────────────────────────────────────────────────────
output "ingest_api_endpoint" {
  description = "Invoke URL of Ingest API"
  value       = aws_apigatewayv2_stage.ingest_api.invoke_url
}

# ── design connections ──────────────────────────────────────────
#   Event Producers ──▶ Ingest API   (events in)
#   Ingest API ──▶ Ingest Fn   (post /events)
#   Ingest Fn ──▶ Domain Bus   (publish)
#   Domain Bus ──▶ Orders Queue   (rule: orders)
#   Domain Bus ──▶ Alerts Topic   (rule: alerts)
#   Orders Queue ──▶ Order Processor   (batch trigger)
#   Order Processor ──▶ Orders Table   (persist)
"
`;

exports[`template golden output > serverless-api → CloudFormation 1`] = `
"{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Serverless API — generated by KloudArch Studio. Review before deploying.",
  "Resources": {
    "ResultsBucket": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "VersioningConfiguration": {
          "Status": "Enabled"
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Results Bucket"
          }
        ]
      }
    },
    "AppTable": {
      "Type": "AWS::DynamoDB::Table",
      "Properties": {
        "BillingMode": "PAY_PER_REQUEST",
        "AttributeDefinitions": [
          {
            "AttributeName": "id",
            "AttributeType": "S"
          }
        ],
        "KeySchema": [
          {
            "AttributeName": "id",
            "KeyType": "HASH"
          }
        ]
      }
    },
    "JobsQueue": {
      "Type": "AWS::SQS::Queue",
      "Properties": {
        "VisibilityTimeout": 30
      }
    },
    "UserPool": {
      "Type": "AWS::Cognito::UserPool",
      "Properties": {
        "MfaConfiguration": "OPTIONAL",
        "EnabledMfas": [
          "SOFTWARE_TOKEN_MFA"
        ],
        "Policies": {
          "PasswordPolicy": {
            "MinimumLength": 12,
            "RequireLowercase": true,
            "RequireNumbers": true,
            "RequireSymbols": true,
            "RequireUppercase": true
          }
        }
      }
    },
    "UserPoolClient": {
      "Type": "AWS::Cognito::UserPoolClient",
      "Properties": {
        "UserPoolId": {
          "Ref": "UserPool"
        }
      }
    },
    "LogsAlarms": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "LogGroupName": {
          "Fn::Sub": "/\${AWS::StackName}/logsalarms"
        },
        "RetentionInDays": 30
      }
    },
    "LambdaExecRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              },
              "Action": "sts:AssumeRole"
            }
          ]
        },
        "ManagedPolicyArns": [
          "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
        ],
        "Policies": [
          {
            "PolicyName": "kloudarch-connected-resources",
            "PolicyDocument": {
              "Version": "2012-10-17",
              "Statement": [
                {
                  "Effect": "Allow",
                  "Action": [
                    "dynamodb:GetItem",
                    "dynamodb:PutItem",
                    "dynamodb:UpdateItem",
                    "dynamodb:DeleteItem",
                    "dynamodb:Query",
                    "dynamodb:Scan"
                  ],
                  "Resource": {
                    "Fn::GetAtt": [
                      "AppTable",
                      "Arn"
                    ]
                  }
                },
                {
                  "Effect": "Allow",
                  "Action": [
                    "sqs:SendMessage",
                    "sqs:GetQueueAttributes"
                  ],
                  "Resource": {
                    "Fn::GetAtt": [
                      "JobsQueue",
                      "Arn"
                    ]
                  }
                },
                {
                  "Effect": "Allow",
                  "Action": [
                    "s3:GetObject",
                    "s3:PutObject",
                    "s3:ListBucket"
                  ],
                  "Resource": [
                    {
                      "Fn::GetAtt": [
                        "ResultsBucket",
                        "Arn"
                      ]
                    },
                    {
                      "Fn::Sub": "\${ResultsBucket.Arn}/*"
                    }
                  ]
                },
                {
                  "Effect": "Allow",
                  "Action": [
                    "sqs:ReceiveMessage",
                    "sqs:DeleteMessage",
                    "sqs:GetQueueAttributes"
                  ],
                  "Resource": {
                    "Fn::GetAtt": [
                      "JobsQueue",
                      "Arn"
                    ]
                  }
                }
              ]
            }
          }
        ]
      }
    },
    "ApiHandler": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Runtime": "nodejs22.x",
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LambdaExecRole",
            "Arn"
          ]
        },
        "MemorySize": 512,
        "Timeout": 10,
        "Code": {
          "ZipFile": "exports.handler = async () => ({\\n  statusCode: 200,\\n  body: JSON.stringify({ message: \\"KloudArch placeholder - replace me\\" }),\\n});"
        },
        "Environment": {
          "Variables": {
            "TABLE_NAME": {
              "Ref": "AppTable"
            },
            "QUEUE_URL": {
              "Ref": "JobsQueue"
            }
          }
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Api Handler"
          }
        ]
      }
    },
    "JobWorker": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Runtime": "nodejs22.x",
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LambdaExecRole",
            "Arn"
          ]
        },
        "MemorySize": 256,
        "Timeout": 120,
        "Code": {
          "ZipFile": "exports.handler = async () => ({\\n  statusCode: 200,\\n  body: JSON.stringify({ message: \\"KloudArch placeholder - replace me\\" }),\\n});"
        },
        "Environment": {
          "Variables": {
            "BUCKET_NAME": {
              "Ref": "ResultsBucket"
            }
          }
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Job Worker"
          }
        ]
      }
    },
    "JobsQueueToJobWorker": {
      "Type": "AWS::Lambda::EventSourceMapping",
      "Properties": {
        "EventSourceArn": {
          "Fn::GetAtt": [
            "JobsQueue",
            "Arn"
          ]
        },
        "FunctionName": {
          "Ref": "JobWorker"
        },
        "BatchSize": 10
      }
    },
    "PublicAPI": {
      "Type": "AWS::ApiGatewayV2::Api",
      "Properties": {
        "Name": {
          "Fn::Sub": "\${AWS::StackName}-publicapi"
        },
        "ProtocolType": "HTTP"
      }
    },
    "PublicAPIStage": {
      "Type": "AWS::ApiGatewayV2::Stage",
      "Properties": {
        "ApiId": {
          "Ref": "PublicAPI"
        },
        "StageName": "prod",
        "AutoDeploy": true
      }
    },
    "PublicAPIApiHandlerIntegration": {
      "Type": "AWS::ApiGatewayV2::Integration",
      "Properties": {
        "ApiId": {
          "Ref": "PublicAPI"
        },
        "IntegrationType": "AWS_PROXY",
        "IntegrationUri": {
          "Fn::GetAtt": [
            "ApiHandler",
            "Arn"
          ]
        },
        "PayloadFormatVersion": "2.0"
      }
    },
    "PublicAPIApiHandlerRoute": {
      "Type": "AWS::ApiGatewayV2::Route",
      "Properties": {
        "ApiId": {
          "Ref": "PublicAPI"
        },
        "RouteKey": "ANY /apihandler/{proxy+}",
        "Target": {
          "Fn::Sub": "integrations/\${PublicAPIApiHandlerIntegration}"
        }
      }
    },
    "PublicAPIApiHandlerPermission": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Ref": "ApiHandler"
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Sub": "arn:aws:execute-api:\${AWS::Region}:\${AWS::AccountId}:\${PublicAPI}/*/*"
        }
      }
    },
    "PublicAPIJwtAuthorizer": {
      "Type": "AWS::ApiGatewayV2::Authorizer",
      "Properties": {
        "ApiId": {
          "Ref": "PublicAPI"
        },
        "AuthorizerType": "JWT",
        "IdentitySource": [
          "$request.header.Authorization"
        ],
        "Name": "cognito-jwt",
        "JwtConfiguration": {
          "Audience": [
            {
              "Ref": "UserPoolClient"
            }
          ],
          "Issuer": {
            "Fn::Sub": "https://cognito-idp.\${AWS::Region}.amazonaws.com/\${UserPool}"
          }
        }
      }
    }
  },
  "Outputs": {
    "ResultsBucketBucket": {
      "Value": {
        "Ref": "ResultsBucket"
      },
      "Description": "Bucket name of Results Bucket"
    },
    "PublicAPIEndpoint": {
      "Value": {
        "Fn::GetAtt": [
          "PublicAPI",
          "ApiEndpoint"
        ]
      },
      "Description": "Invoke URL of Public API"
    }
  }
}"
`;

exports[`template golden output > serverless-api → Terraform 1`] = `
"# ╔══════════════════════════════════════════════════════════════════╗
# ║  SERVERLESS API                                                  ║
# ║  Generated by KloudArch Studio — review before applying.          ║
# ╚══════════════════════════════════════════════════════════════════╝

terraform {
  required_version = ">= 1.6.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

variable "project" {
  type    = string
  default = "serverless-api"
}

variable "aws_region" {
  type    = string
  default = "us-east-1"
}

provider "aws" {
  region = var.aws_region
}

# ── shared ──────────────────────────────────────────────────────
resource "aws_iam_role" "lambda_exec" {
  name = "\${var.project}-lambda-exec"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Action    = "sts:AssumeRole"
      Effect    = "Allow"
      Principal = { Service = "lambda.amazonaws.com" }
    }]
  })
}

resource "aws_iam_role_policy_attachment" "lambda_basic" {
  role       = aws_iam_role.lambda_exec.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
}

# ── Results Bucket ──────────────────────────────────────────
resource "aws_s3_bucket" "results_bucket" {
  bucket = "\${var.project}-results-bucket"
}

resource "aws_s3_bucket_versioning" "results_bucket" {
  bucket = aws_s3_bucket.results_bucket.id

  versioning_configuration {
    status = "Enabled"
  }
}

resource "aws_s3_bucket_public_access_block" "results_bucket" {
  bucket                  = aws_s3_bucket.results_bucket.id
  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

# ── App Table ───────────────────────────────────────────────
resource "aws_dynamodb_table" "app_table" {
  name         = "\${var.project}-app-table"
  billing_mode = "PAY_PER_REQUEST"
  hash_key     = "id"

  attribute {
    name = "id"
    type = "S"
  }
}

# ── Jobs Queue ──────────────────────────────────────────────
resource "aws_sqs_queue" "jobs_queue" {
  name                       = "\${var.project}-jobs-queue"
  visibility_timeout_seconds = 30
}

# ── User Pool ───────────────────────────────────────────────
resource "aws_cognito_user_pool" "user_pool" {
  name = "\${var.project}-user-pool"

  mfa_configuration = "OPTIONAL"

  software_token_mfa_configuration {
    enabled = true
  }

  password_policy {
    minimum_length    = 12
    require_lowercase = true
    require_numbers   = true
    require_symbols   = true
    require_uppercase = true
  }
}

resource "aws_cognito_user_pool_client" "user_pool" {
  name         = "\${var.project}-client"
  user_pool_id = aws_cognito_user_pool.user_pool.id
}

# ── Logs & Alarms ───────────────────────────────────────────
resource "aws_cloudwatch_log_group" "logs_alarms" {
  name              = "/\${var.project}/logs-alarms"
  retention_in_days = 30
}

# NOTE: add aws_cloudwatch_metric_alarm resources for the services
# connected to "Logs & Alarms" on the canvas.

# ── Api Handler ─────────────────────────────────────────────
resource "aws_lambda_function" "api_handler" {
  function_name = "\${var.project}-api-handler"
  role          = aws_iam_role.lambda_exec.arn
  runtime       = "nodejs22.x"
  handler       = "index.handler"
  memory_size   = 512
  timeout       = 10

  # Package your code at this path before applying.
  filename         = "build/api_handler.zip"
  source_code_hash = filebase64sha256("build/api_handler.zip")

  environment {
    variables = {
      TABLE_NAME = aws_dynamodb_table.app_table.name
      QUEUE_URL = aws_sqs_queue.jobs_queue.url
    }
  }
}

# NOTE: grant api_handler least-privilege access to the connected resources above.

# ── Job Worker ──────────────────────────────────────────────
resource "aws_lambda_function" "job_worker" {
  function_name = "\${var.project}-job-worker"
  role          = aws_iam_role.lambda_exec.arn
  runtime       = "nodejs22.x"
  handler       = "index.handler"
  memory_size   = 256
  timeout       = 120

  # Package your code at this path before applying.
  filename         = "build/job_worker.zip"
  source_code_hash = filebase64sha256("build/job_worker.zip")

  environment {
    variables = {
      BUCKET_NAME = aws_s3_bucket.results_bucket.bucket
    }
  }
}

resource "aws_lambda_event_source_mapping" "jobs_queue_to_job_worker" {
  event_source_arn = aws_sqs_queue.jobs_queue.arn
  function_name    = aws_lambda_function.job_worker.arn
  batch_size       = 10
}

# NOTE: grant job_worker least-privilege access to the connected resources above.

# ── Public API ──────────────────────────────────────────────
resource "aws_apigatewayv2_api" "public_api" {
  name          = "\${var.project}-public-api"
  protocol_type = "HTTP"
}

resource "aws_apigatewayv2_stage" "public_api" {
  api_id      = aws_apigatewayv2_api.public_api.id
  name        = "prod"
  auto_deploy = true
}

resource "aws_apigatewayv2_integration" "public_api_api_handler" {
  api_id                 = aws_apigatewayv2_api.public_api.id
  integration_type       = "AWS_PROXY"
  integration_uri        = aws_lambda_function.api_handler.invoke_arn
  payload_format_version = "2.0"
}

resource "aws_apigatewayv2_route" "public_api_api_handler" {
  api_id    = aws_apigatewayv2_api.public_api.id
  route_key = "ANY /api-handler/{proxy+}"
  target    = "integrations/\${aws_apigatewayv2_integration.public_api_api_handler.id}"
}

resource "aws_lambda_permission" "public_api_api_handler" {
  statement_id  = "AllowAPIGw_api_handler"
  action        = "lambda:InvokeFunction"
  function_name = aws_lambda_function.api_handler.function_name
  principal     = "apigateway.amazonaws.com"
  source_arn    = "\${aws_apigatewayv2_api.public_api.execution_arn}/*/*"
}

resource "aws_apigatewayv2_authorizer" "public_api_jwt" {
  api_id           = aws_apigatewayv2_api.public_api.id
  authorizer_type  = "JWT"
  identity_sources = ["$request.header.Authorization"]
  name             = "cognito-jwt"

  jwt_configuration {
    audience = [aws_cognito_user_pool_client.user_pool.id]
    issuer   = "https://\${aws_cognito_user_pool.user_pool.endpoint}"
  }
}

# ── API Clients ─────────────────────────────────────────────
# External actor "API Clients" (api clients) — nothing to provision.

# ── outputs ─────────────────────────────────────────────────────
output "results_bucket_bucket" {
  description = "Bucket name of Results Bucket"
  value       = aws_s3_bucket.results_bucket.bucket
}

output "public_api_endpoint" {
  description = "Invoke URL of Public API"
  value       = aws_apigatewayv2_stage.public_api.invoke_url
}

# ── design connections ──────────────────────────────────────────
#   API Clients ──▶ Public API   (https)
#   User Pool ──▶ Public API   (jwt authorizer)
#   Public API ──▶ Api Handler   (any /api)
#   Api Handler ──▶ App Table   (read/write)
#   Api Handler ──▶ Jobs Queue   (enqueue)
#   Jobs Queue ──▶ Job Worker   (event source)
#   Job Worker ──▶ Results Bucket   (store results)
#   Api Handler ──▶ Logs & Alarms   (logs)
"
`;

exports[`template golden output > static-site → CloudFormation 1`] = `
"{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Static Site + CDN — generated by KloudArch Studio. Review before deploying.",
  "Resources": {
    "SiteBucket": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "VersioningConfiguration": {
          "Status": "Enabled"
        },
        "WebsiteConfiguration": {
          "IndexDocument": "index.html",
          "ErrorDocument": "error.html"
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Site Bucket"
          }
        ]
      }
    },
    "AccessLogs": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "LogGroupName": {
          "Fn::Sub": "/\${AWS::StackName}/accesslogs"
        },
        "RetentionInDays": 30
      }
    },
    "EdgeFirewall": {
      "Type": "AWS::WAFv2::WebACL",
      "Properties": {
        "Scope": "CLOUDFRONT",
        "DefaultAction": {
          "Allow": {}
        },
        "VisibilityConfig": {
          "CloudWatchMetricsEnabled": true,
          "MetricName": "edgefirewall",
          "SampledRequestsEnabled": true
        },
        "Rules": [
          {
            "Name": "aws-common",
            "Priority": 1,
            "OverrideAction": {
              "None": {}
            },
            "Statement": {
              "ManagedRuleGroupStatement": {
                "Name": "AWSManagedRulesCommonRuleSet",
                "VendorName": "AWS"
              }
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "aws-common",
              "SampledRequestsEnabled": true
            }
          }
        ]
      }
    },
    "CdnOriginAccessControl": {
      "Type": "AWS::CloudFront::OriginAccessControl",
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": {
            "Fn::Sub": "\${AWS::StackName}-oac"
          },
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4"
        }
      }
    },
    "SiteCDN": {
      "Type": "AWS::CloudFront::Distribution",
      "Properties": {
        "DistributionConfig": {
          "Enabled": true,
          "Comment": "Site CDN",
          "PriceClass": "PriceClass_100",
          "DefaultRootObject": "index.html",
          "Origins": [
            {
              "Id": "s3-SiteBucket",
              "DomainName": {
                "Fn::GetAtt": [
                  "SiteBucket",
                  "RegionalDomainName"
                ]
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": ""
              },
              "OriginAccessControlId": {
                "Ref": "CdnOriginAccessControl"
              }
            }
          ],
          "DefaultCacheBehavior": {
            "TargetOriginId": "s3-SiteBucket",
            "ViewerProtocolPolicy": "redirect-to-https",
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS"
            ],
            "CachedMethods": [
              "GET",
              "HEAD"
            ],
            "DefaultTTL": 3600,
            "ForwardedValues": {
              "QueryString": false,
              "Cookies": {
                "Forward": "none"
              }
            }
          },
          "Restrictions": {
            "GeoRestriction": {
              "RestrictionType": "none"
            }
          },
          "ViewerCertificate": {
            "CloudFrontDefaultCertificate": true
          },
          "WebACLId": {
            "Fn::GetAtt": [
              "EdgeFirewall",
              "Arn"
            ]
          }
        }
      }
    },
    "SiteBucketOacPolicy": {
      "Type": "AWS::S3::BucketPolicy",
      "Properties": {
        "Bucket": {
          "Ref": "SiteBucket"
        },
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com"
              },
              "Action": "s3:GetObject",
              "Resource": {
                "Fn::Sub": "\${SiteBucket.Arn}/*"
              },
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Sub": "arn:aws:cloudfront::\${AWS::AccountId}:distribution/\${SiteCDN}"
                  }
                }
              }
            }
          ]
        }
      }
    },
    "SiteDNS": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": "www.example.com"
      }
    },
    "SiteDNSSiteCDNRecord": {
      "Type": "AWS::Route53::RecordSet",
      "Properties": {
        "HostedZoneId": {
          "Ref": "SiteDNS"
        },
        "Name": "www.example.com",
        "Type": "A",
        "AliasTarget": {
          "DNSName": {
            "Fn::GetAtt": [
              "SiteCDN",
              "DomainName"
            ]
          },
          "HostedZoneId": "Z2FDTNDATAQYW2"
        }
      }
    }
  },
  "Outputs": {
    "SiteBucketBucket": {
      "Value": {
        "Ref": "SiteBucket"
      },
      "Description": "Bucket name of Site Bucket"
    },
    "SiteCDNDomain": {
      "Value": {
        "Fn::GetAtt": [
          "SiteCDN",
          "DomainName"
        ]
      },
      "Description": "CDN domain of Site CDN"
    }
  }
}"
`;

exports[`template golden output > static-site → Terraform 1`] = `
"# ╔══════════════════════════════════════════════════════════════════╗
# ║  STATIC SITE + CDN                                               ║
# ║  Generated by KloudArch Studio — review before applying.          ║
# ╚══════════════════════════════════════════════════════════════════╝

terraform {
  required_version = ">= 1.6.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

variable "project" {
  type    = string
  default = "static-site-cdn"
}

variable "aws_region" {
  type    = string
  default = "us-east-1"
}

provider "aws" {
  region = var.aws_region
}

# ── shared ──────────────────────────────────────────────────────
resource "aws_cloudfront_origin_access_control" "main" {
  name                              = "\${var.project}-oac"
  origin_access_control_origin_type = "s3"
  signing_behavior                  = "always"
  signing_protocol                  = "sigv4"
}

# ── Site Bucket ─────────────────────────────────────────────
resource "aws_s3_bucket" "site_bucket" {
  bucket = "\${var.project}-site-bucket"
}

resource "aws_s3_bucket_versioning" "site_bucket" {
  bucket = aws_s3_bucket.site_bucket.id

  versioning_configuration {
    status = "Enabled"
  }
}

resource "aws_s3_bucket_website_configuration" "site_bucket" {
  bucket = aws_s3_bucket.site_bucket.id

  index_document { suffix = "index.html" }
  error_document { key = "error.html" }
}

resource "aws_s3_bucket_public_access_block" "site_bucket" {
  bucket                  = aws_s3_bucket.site_bucket.id
  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

# ── Access Logs ─────────────────────────────────────────────
resource "aws_cloudwatch_log_group" "access_logs" {
  name              = "/\${var.project}/access-logs"
  retention_in_days = 30
}

# NOTE: add aws_cloudwatch_metric_alarm resources for the services
# connected to "Access Logs" on the canvas.

# ── Edge Firewall ───────────────────────────────────────────
resource "aws_wafv2_web_acl" "edge_firewall" {
  name  = "\${var.project}-edge-firewall"
  scope = "CLOUDFRONT"

  default_action {
    allow {}
  }

  rule {
    name     = "aws-common"
    priority = 1

    override_action {
      none {}
    }

    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesCommonRuleSet"
        vendor_name = "AWS"
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "aws-common"
      sampled_requests_enabled   = true
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "edge_firewall"
    sampled_requests_enabled   = true
  }
}

# ── Site CDN ────────────────────────────────────────────────
resource "aws_cloudfront_distribution" "site_cdn" {
  enabled             = true
  comment             = "Site CDN"
  price_class         = "PriceClass_100"
  default_root_object = "index.html"
  web_acl_id          = aws_wafv2_web_acl.edge_firewall.arn

  origin {
    origin_id                = "s3-site_bucket"
    domain_name              = aws_s3_bucket.site_bucket.bucket_regional_domain_name
    origin_access_control_id = aws_cloudfront_origin_access_control.main.id
  }

  default_cache_behavior {
    target_origin_id       = "s3-site_bucket"
    viewer_protocol_policy = "redirect-to-https"
    allowed_methods        = ["GET", "HEAD", "OPTIONS"]
    cached_methods         = ["GET", "HEAD"]
    default_ttl            = 3600

    forwarded_values {
      query_string = false
      cookies { forward = "none" }
    }
  }

  restrictions {
    geo_restriction { restriction_type = "none" }
  }

  viewer_certificate {
    cloudfront_default_certificate = true
  }
}

# ── Site DNS ────────────────────────────────────────────────
resource "aws_route53_zone" "site_dns" {
  name = "www.example.com"
}

resource "aws_route53_record" "site_dns_site_cdn" {
  zone_id = aws_route53_zone.site_dns.zone_id
  name    = "www.example.com"
  type    = "A"

  alias {
    name                   = aws_cloudfront_distribution.site_cdn.domain_name
    zone_id                = aws_cloudfront_distribution.site_cdn.hosted_zone_id
    evaluate_target_health = false
  }
}

# ── Visitors ────────────────────────────────────────────────
# External actor "Visitors" (web) — nothing to provision.

# ── outputs ─────────────────────────────────────────────────────
output "site_bucket_bucket" {
  description = "Bucket name of Site Bucket"
  value       = aws_s3_bucket.site_bucket.bucket
}

output "site_cdn_domain" {
  description = "CDN domain of Site CDN"
  value       = aws_cloudfront_distribution.site_cdn.domain_name
}

# ── design connections ──────────────────────────────────────────
#   Visitors ──▶ Site DNS   (dns)
#   Site DNS ──▶ Site CDN   (alias)
#   Site CDN ──▶ Site Bucket   (origin (oac))
#   Edge Firewall ──▶ Site CDN   (web acl)
#   Site CDN ──▶ Access Logs   (logs)
"
`;

exports[`template golden output > three-tier → CloudFormation 1`] = `
"{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Three-Tier Web App — generated by KloudArch Studio. Review before deploying.",
  "Parameters": {
    "Al2023AmiId": {
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
      "Default": "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64",
      "Description": "Latest Amazon Linux 2023 AMI (resolved via public SSM parameter)"
    }
  },
  "Resources": {
    "AppVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "App VPC"
          }
        ]
      }
    },
    "PublicA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "AppVPC"
        },
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": {
          "Fn::Sub": "\${AWS::Region}a"
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Public A"
          },
          {
            "Key": "Tier",
            "Value": "public"
          }
        ]
      }
    },
    "PublicB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "AppVPC"
        },
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": {
          "Fn::Sub": "\${AWS::Region}b"
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Public B"
          },
          {
            "Key": "Tier",
            "Value": "public"
          }
        ]
      }
    },
    "PrivateSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "AppVPC"
        },
        "CidrBlock": "10.0.3.0/24",
        "AvailabilityZone": {
          "Fn::Sub": "\${AWS::Region}a"
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Private Subnet"
          },
          {
            "Key": "Tier",
            "Value": "private"
          }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Internet Gateway"
          }
        ]
      }
    },
    "InternetGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "AppVPC"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "AppVPCPublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "AppVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "App VPC public"
          }
        ]
      }
    },
    "AppVPCPublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": [
        "InternetGatewayAttachment"
      ],
      "Properties": {
        "RouteTableId": {
          "Ref": "AppVPCPublicRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "PublicAPublicAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicA"
        },
        "RouteTableId": {
          "Ref": "AppVPCPublicRouteTable"
        }
      }
    },
    "PublicBPublicAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicB"
        },
        "RouteTableId": {
          "Ref": "AppVPCPublicRouteTable"
        }
      }
    },
    "NATGatewayEip": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": [
        "InternetGatewayAttachment"
      ],
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NATGateway": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicB"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "NATGatewayEip",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NAT Gateway"
          }
        ]
      }
    },
    "AppVPCPrivateRouteTableB": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "AppVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "App VPC private b"
          }
        ]
      }
    },
    "AppVPCPrivateRouteTableBRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "AppVPCPrivateRouteTableB"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NATGateway"
        }
      }
    },
    "PrivateSubnetPrivateAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnet"
        },
        "RouteTableId": {
          "Ref": "AppVPCPrivateRouteTableB"
        }
      }
    },
    "PrimaryDB": {
      "Type": "AWS::RDS::DBInstance",
      "DeletionPolicy": "Delete",
      "UpdateReplacePolicy": "Delete",
      "Properties": {
        "Engine": "postgres",
        "DBInstanceClass": "db.t3.micro",
        "AllocatedStorage": "20",
        "MultiAZ": true,
        "MasterUsername": "app",
        "ManageMasterUserPassword": true,
        "DeletionProtection": false
      }
    },
    "SessionCache": {
      "Type": "AWS::ElastiCache::CacheCluster",
      "Properties": {
        "Engine": "redis",
        "CacheNodeType": "cache.t3.micro",
        "NumCacheNodes": 1,
        "Port": 6379
      }
    },
    "Monitoring": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "LogGroupName": {
          "Fn::Sub": "/\${AWS::StackName}/monitoring"
        },
        "RetentionInDays": 30
      }
    },
    "AppServers1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": {
          "Ref": "Al2023AmiId"
        },
        "InstanceType": "t3.medium",
        "SubnetId": {
          "Ref": "PrivateSubnet"
        },
        "SecurityGroupIds": [
          {
            "Ref": "WebALBTargetsSecurityGroup"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "App Servers 1"
          }
        ]
      }
    },
    "AppServers2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": {
          "Ref": "Al2023AmiId"
        },
        "InstanceType": "t3.medium",
        "SubnetId": {
          "Ref": "PrivateSubnet"
        },
        "SecurityGroupIds": [
          {
            "Ref": "WebALBTargetsSecurityGroup"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "App Servers 2"
          }
        ]
      }
    },
    "WebALBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Ingress for Web ALB",
        "VpcId": {
          "Ref": "AppVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "WebALBTargetsSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Targets reachable from Web ALB",
        "VpcId": {
          "Ref": "AppVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "SourceSecurityGroupId": {
              "Ref": "WebALBSecurityGroup"
            }
          }
        ]
      }
    },
    "WebALB": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Type": "application",
        "Scheme": "internet-facing",
        "Subnets": [
          {
            "Ref": "PublicA"
          },
          {
            "Ref": "PublicB"
          }
        ],
        "SecurityGroups": [
          {
            "Ref": "WebALBSecurityGroup"
          }
        ]
      },
      "DependsOn": [
        "AppVPCPublicRoute"
      ]
    },
    "WebALBTargetGroup": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "HTTP",
        "TargetType": "instance",
        "VpcId": {
          "Ref": "AppVPC"
        },
        "Targets": [
          {
            "Id": {
              "Ref": "AppServers1"
            }
          },
          {
            "Id": {
              "Ref": "AppServers2"
            }
          }
        ]
      }
    },
    "WebALBListener": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "LoadBalancerArn": {
          "Ref": "WebALB"
        },
        "Port": 80,
        "Protocol": "HTTP",
        "DefaultActions": [
          {
            "Type": "forward",
            "TargetGroupArn": {
              "Ref": "WebALBTargetGroup"
            }
          }
        ]
      }
    },
    "AppDNS": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": "app.example.com"
      }
    },
    "AppDNSWebALBRecord": {
      "Type": "AWS::Route53::RecordSet",
      "Properties": {
        "HostedZoneId": {
          "Ref": "AppDNS"
        },
        "Name": "app.example.com",
        "Type": "A",
        "AliasTarget": {
          "DNSName": {
            "Fn::GetAtt": [
              "WebALB",
              "DNSName"
            ]
          },
          "HostedZoneId": {
            "Fn::GetAtt": [
              "WebALB",
              "CanonicalHostedZoneID"
            ]
          }
        }
      }
    }
  },
  "Outputs": {
    "PrimaryDBEndpoint": {
      "Value": {
        "Fn::GetAtt": [
          "PrimaryDB",
          "Endpoint.Address"
        ]
      },
      "Description": "Endpoint of Primary DB"
    },
    "WebALBDns": {
      "Value": {
        "Fn::GetAtt": [
          "WebALB",
          "DNSName"
        ]
      },
      "Description": "Public DNS of Web ALB"
    }
  }
}"
`;

exports[`template golden output > three-tier → Terraform 1`] = `
"# ╔══════════════════════════════════════════════════════════════════╗
# ║  THREE-TIER WEB APP                                              ║
# ║  Generated by KloudArch Studio — review before applying.          ║
# ╚══════════════════════════════════════════════════════════════════╝

terraform {
  required_version = ">= 1.6.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

variable "project" {
  type    = string
  default = "three-tier-web-app"
}

variable "aws_region" {
  type    = string
  default = "us-east-1"
}

provider "aws" {
  region = var.aws_region
}

# ── shared ──────────────────────────────────────────────────────
resource "aws_route_table" "app_vpc_public" {
  vpc_id = aws_vpc.app_vpc.id

  tags = { Name = "App VPC public" }
}

resource "aws_route" "app_vpc_public_internet" {
  route_table_id         = aws_route_table.app_vpc_public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.internet_gateway.id
}

resource "aws_route_table_association" "public_a_public" {
  subnet_id      = aws_subnet.public_a.id
  route_table_id = aws_route_table.app_vpc_public.id
}

resource "aws_route_table_association" "public_b_public" {
  subnet_id      = aws_subnet.public_b.id
  route_table_id = aws_route_table.app_vpc_public.id
}

resource "aws_route_table" "app_vpc_private_b" {
  vpc_id = aws_vpc.app_vpc.id

  tags = { Name = "App VPC private b" }
}

resource "aws_route" "app_vpc_private_b_nat" {
  route_table_id         = aws_route_table.app_vpc_private_b.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat_gateway.id
}

resource "aws_route_table_association" "private_subnet_private" {
  subnet_id      = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.app_vpc_private_b.id
}

variable "db_username" {
  type    = string
  default = "app"
}

variable "db_password" {
  type      = string
  sensitive = true
}

data "aws_ami" "al2023" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["al2023-ami-*-x86_64"]
  }
}

# ── App VPC ─────────────────────────────────────────────────
resource "aws_vpc" "app_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = { Name = "App VPC" }
}

# ── Public A ────────────────────────────────────────────────
resource "aws_subnet" "public_a" {
  vpc_id                  = aws_vpc.app_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true

  tags = { Name = "Public A", Tier = "public" }
}

# ── Public B ────────────────────────────────────────────────
resource "aws_subnet" "public_b" {
  vpc_id                  = aws_vpc.app_vpc.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true

  tags = { Name = "Public B", Tier = "public" }
}

# ── Private Subnet ──────────────────────────────────────────
resource "aws_subnet" "private_subnet" {
  vpc_id                  = aws_vpc.app_vpc.id
  cidr_block              = "10.0.3.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = false

  tags = { Name = "Private Subnet", Tier = "private" }
}

# ── Internet Gateway ────────────────────────────────────────
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.app_vpc.id

  tags = { Name = "Internet Gateway" }
}

# ── NAT Gateway ─────────────────────────────────────────────
resource "aws_eip" "nat_gateway" {
  domain = "vpc"
}

resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = aws_eip.nat_gateway.id
  subnet_id     = aws_subnet.public_b.id
  depends_on    = [aws_internet_gateway.internet_gateway]

  tags = { Name = "NAT Gateway" }
}

# ── Primary DB ──────────────────────────────────────────────
resource "aws_db_instance" "primary_db" {
  identifier        = "\${var.project}-primary-db"
  engine            = "postgres"
  engine_version    = "16.4"
  instance_class    = "db.t3.micro"
  allocated_storage = 20
  multi_az          = true

  username = var.db_username
  password = var.db_password

  skip_final_snapshot = true # set false for production
}

# ── Session Cache ───────────────────────────────────────────
resource "aws_elasticache_cluster" "session_cache" {
  cluster_id      = "\${var.project}-session-cache"
  engine          = "redis"
  node_type       = "cache.t3.micro"
  num_cache_nodes = 1
  port            = 6379
}

# ── Monitoring ──────────────────────────────────────────────
resource "aws_cloudwatch_log_group" "monitoring" {
  name              = "/\${var.project}/monitoring"
  retention_in_days = 30
}

# NOTE: add aws_cloudwatch_metric_alarm resources for the services
# connected to "Monitoring" on the canvas.

# ── App Servers ─────────────────────────────────────────────
resource "aws_instance" "app_servers" {
  count         = 2
  ami           = data.aws_ami.al2023.id
  instance_type = "t3.medium"
  subnet_id     = aws_subnet.private_subnet.id
  vpc_security_group_ids = [aws_security_group.web_alb_targets_sg.id]

  tags = { Name = "App Servers \${count.index}" }
}

# ── Web ALB ─────────────────────────────────────────────────
resource "aws_security_group" "web_alb_sg" {
  name_prefix = "\${var.project}-web-alb-"
  vpc_id      = aws_vpc.app_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "web_alb_targets_sg" {
  name_prefix = "\${var.project}-web-alb-targets-"
  vpc_id      = aws_vpc.app_vpc.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.web_alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_lb" "web_alb" {
  name               = "\${var.project}-web-alb"
  load_balancer_type = "application"
  internal           = false
  subnets            = [aws_subnet.public_a.id, aws_subnet.public_b.id]
  security_groups    = [aws_security_group.web_alb_sg.id]
}

resource "aws_lb_target_group" "web_alb" {
  name        = "\${var.project}-web-alb-tg"
  port        = 80
  protocol    = "HTTP"
  target_type = "instance"
  vpc_id      = aws_vpc.app_vpc.id
}

resource "aws_lb_listener" "web_alb" {
  load_balancer_arn = aws_lb.web_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.web_alb.arn
  }
}

resource "aws_lb_target_group_attachment" "web_alb_app_servers" {
  count            = 2
  target_group_arn = aws_lb_target_group.web_alb.arn
  target_id        = aws_instance.app_servers[count.index].id
  port             = 80
}

# ── App DNS ─────────────────────────────────────────────────
resource "aws_route53_zone" "app_dns" {
  name = "app.example.com"
}

resource "aws_route53_record" "app_dns_web_alb" {
  zone_id = aws_route53_zone.app_dns.zone_id
  name    = "app.example.com"
  type    = "A"

  alias {
    name                   = aws_lb.web_alb.dns_name
    zone_id                = aws_lb.web_alb.zone_id
    evaluate_target_health = true
  }
}

# ── Web Users ───────────────────────────────────────────────
# External actor "Web Users" (web) — nothing to provision.

# ── outputs ─────────────────────────────────────────────────────
output "web_alb_dns" {
  description = "Public DNS of Web ALB"
  value       = aws_lb.web_alb.dns_name
}

# ── design connections ──────────────────────────────────────────
#   Web Users ──▶ App DNS   (dns lookup)
#   App DNS ──▶ Web ALB   (http 80)
#   Web ALB ──▶ App Servers   (http 80)
#   App Servers ──▶ Primary DB   (sql)
#   App Servers ──▶ Session Cache   (cache)
#   App Servers ──▶ Monitoring   (logs)
"
`;
